# slapt-update-service

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  config.h.in  configure.ac  doinst.sh  meson.build  slack-desc  slack-required  slapt-update-service.Slackbuild  slapt-update-service.desktop
data/: Makefile.am  SlaptService.conf.in  meson.build  org.jaos.SlaptService.service.in
pixmaps/: meson.build
po/: LINGUAS  POTFILES.in  de.po  el.po  en.po  he.po  hu.po  ru.po  uk.po
src/: Makefile.am  client.c  common.h  meson.build  server.c  slapt-service.xml  slaptService.c  slaptService.h
